1130187097	Schnell-Shortcuts eingebaut, JavaScript in andere Dateien verlagert.
1130086916	Bug in der Rohstoffproduktion behoben, bei Energiemangel wurden falsche Werte produziert.
1130016470	Erste Vorkehrungen fürs Handelssystem getroffen, Programme eingebaut, die den Handelskurs berechnen und Angebote auswerten.
1130001508	Bündnissystem eingebaut.
1129934263	Bugs im Kampf- und Flottensystem behoben.
1129918442	Rundungsfehler in der Rohstoffproduktion behoben.
1129914996	Einige größere Bugs im automatischen Eventhandler behoben, Datenbank auf vorgestern, 18:00 Uhr zurückgesetzt. Soweit scheint es jetzt zu funktionieren.
1129914947	Sicherheitssystem eingebaut, unter dem Accounts nicht mehr überschrieben werden können.
1129834395	Aufgrund eines Bugs im automatischen Eventhandler sind ein paar Probleme mit dem Flottenversand aufgetreten. Datenbank auf gestern, 18:00 Uhr zurückgesetzt.
1129499419	Automatischer Eventhandler eingebaut.
1129483463	Internen Spielaufbau umstrukturiert, vorbereitet auf automatischen Eventhandler.
1129363584	Unterstützung für Trümmerfelder eingebaut.
1129286165	Neues Feature: „Schnellbau automatisch ausführen“
1129225709	Aktionen in der Karte werden nun nur noch angezeigt, wenn sie ausführbar sind. (Spionage zum Beispiel nur, wenn Spionagesonden verfügbar sind.)
1129224666	Aktive Forschung wird in der Übersicht nun nur noch angezeigt, wenn auf dem Planeten ein Forschungslabor gebaut ist.
1129048927	Aufgrund eines Bugs wurden Accounts überschrieben, Bugs behoben, Spiel wurde neugestartet.
1129039111	Gröbste Fehler des Kampfsystem behoben, scheint ganz gut zu laufen. Testphase läuft weiterhin.
1128976188	Kampfsystem eingebaut, Testphase gestartet.
1128601925	Versionsmanagement eingeführt, derzeitige Versionsbezeichnung: 0.0.0 SVN