@@ -14,6 +14,7 @@ Nachrichten weiterleiten
 Flug- und Kampferfahrungspunkte Vorteil bringen lassen.
 Imperiumsübersicht-ähnliche Funktion einbauen.
 Neues Design für die Hauptseite.
-Planetennamenabfrage der Flottenbewegungen auf der Startseite optimieren.
 Spionageabwehr
 E-Mail-Adresse eintragen können, Passwort zuschicken, Benachrichtigung bei neuen Benutzernachrichten.
+Kontrollwesen einbauen
+„Doppelklickschutz“ in Flottenversand einbauen
